added new table

--- a/test_root_dir/DB10389.yaml
+++ b/test_root_dir/DB10389.yaml
@@ -71,6 +71,6 @@ queries:
     destination:
       type: raw
       database: "db10389"
-      table: "table4"
+      table: "GitactionsTable1"
       
     primary-key: "{EmployeeID}"
